fixed button alignment css in result pages

--- a/public/css/results.css
+++ b/public/css/results.css
@@ -87,13 +87,8 @@ a:visited {
 }
 
 .button-redo {
-    /* display: block;
-    margin-top: -5%;
-    margin-bottom: 30px;
-    margin-left: 43%; */
-    /* display: flex; */
-    /* align-items: center;
-    justify-content: center; */
+    display: block;
+    margin: 0 auto;
     width: 210px;
     height: 50px;
     box-sizing: border-box;
@@ -126,11 +121,8 @@ a:visited {
 }
 
 .button-main-menu {
-    /* display: block;
-    margin-left: 44.5%; */
-    /* display: flex; */
-    /* align-items: center;
-    justify-content: center; */
+    display: block;
+    margin: 1rem auto;
     width: 165px;
     height: 50px;
     box-sizing: border-box;
