--- a/public/css/search.css
+++ b/public/css/search.css
@@ -85,10 +85,8 @@ a:visited {
 }
 
 .button-redo {
-    /* display: block;
-    margin-top: -7%;
-    margin-bottom: 30px;
-    margin-left: 43%; */
+    display: block;
+    margin: 1rem auto;
     width: 210px;
     height: 50px;
     box-sizing: border-box;
@@ -121,10 +119,8 @@ a:visited {
 }
 
 .button-main-menu {
-    /* display: block;
-    margin-left: 44.5%;
-    width: 165px;
-    height: 50px; */
+    display: block;
+    margin: 0 auto;
     box-sizing: border-box;
     appearance: none;
     background-color: transparent;
